--- a/utils.css
+++ b/utils.css
@@ -19,4 +19,11 @@
 }
 .btn-0{
     width:100px;
+    background-color:#979aaa;
+}
+.btn-AC{
+    background-color:#979aaa;
+}
+.btn-C{
+    background-color:#979aaa;
 }
