--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
 
 html,
 body {
   height: 100%;
   width: 100%;
-  font-family: "Roboto", sans-serif;
+  font-family: "Odibee", cursive;
   background: #a8a8a8;
 }
 .button {
   width: 66px;
-  padding: 20px;
+  padding: 10px;
   margin: 0 3px;
   border: 2px solid #838996;
   border-radius: 40px;
   cursor: pointer;
   background-color: #d6d6d6;
+  box-shadow: 3px 3px 5px black;
+  font-weight: bold;
+  font-size: 20px;
 }
 .row {
   padding: 8px 0;
@@ -25,15 +28,20 @@ body {
   text-align: center;
   width: 291px;
   font-size: 20px;
-  margin: 0;
+  margin: 10px;
   padding: 10px 0px;
   border: 2px solid #838996;
   border-radius: 10px;
   background: #d4d4d4;
+  box-shadow: 3px 3px 5px black;
+  font-size: 20px;
+  font-weight: bold;
+  /* margin-top: -50px; */
 }
 .container {
   background: #575757;
   width: 27%;
   height: 82%;
   border-radius: 30px;
+  box-shadow: 5px 5px 5px 5px grey;
 }
