--- a/utils.css
+++ b/utils.css
@@ -1,5 +1,9 @@
 .text-center{
     text-align: center;
+    margin: 50px 0 50px 0;
+    font-weight: bold;
+    font-size: 2.5rem;
+
 }
 
 .mx-auto{
