--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,9 @@ body {
   border-radius: 30px;
   box-shadow: 5px 5px 5px 5px grey;
 }
+footer{
+  text-align: center;
+    margin: 50px 0 50px 0;
+    font-weight: bold;
+    font-size: 2.5rem;
+}
